Change in client.1

--- a/man/man1/client.1
+++ b/man/man1/client.1
@@ -16,4 +16,4 @@ The program prints test results for string functions and file
 functions to the console.
 
 .SH AUTHOR
-Written by Your Name Uzair Tariq.
+Written by Uzair Tariq.
